@@ -1,3 +1,7 @@
+2002-09-05  Piotr Fusik  <fox@scene.pl>
+* cartridge.[ch], ui.c, DOC/cart.txt, DOC/README: seven new cartridge types
+  (by Nir Dary)
+
 2002-08-26  Adam Bienias
 * pokeysnd.c: a fix for better quality of sound
 
